<resources>

    <string name="app_name">CloudDog</string>
    <string name="NetworkConnected">网络已连接</string>
    <string name="NetworkConnecting">网络正在连接</string>
    <string name="NetworkDisConnected">网络未连接</string>
    <string name="LoginOK">登录服务器成功</string>
    <string name="LoginFail">登录服务器失败</string>
    <string name="LocationStart">正在定位\u002E\u002E\u002E</string>
    <string name="LocationSuccess">已定位</string>
    <string name="LocationStop">定位已停止</string>
    <string name="RadarValid">检测到雷达</string>
    <string name="RadarNotValid">未检测到雷达</string>
    <string name="RadarLevelHigh">雷达信号强度很强</string>
    <string name="RadarLevelMid">雷达信号强度中等</string>
    <string name="RadarLevelLow">雷达信号强度较弱</string>
    <string name="Empty">\u0020</string>
    <string name="Open">打开</string>
    <string name="Close">关闭</string>
    <string name="Test">测试</string>
	<string name="Speed">速度</string>
	<string name="SelfpointModeMsg">自建方式选择</string>
	<string-array name="SelfpointModeArray">
	    <item >新增点</item>
	    <item >修改点</item>
	    <item >移除点</item>
	    <item >自用点</item>
	</string-array>
	<string name="SelfPointPictureMsg">照相种类选择</string>
	<string-array name="SelfPointPictureArray">
		<item >闯红灯照相点</item>
		<item >固定照相点</item>
		<item >雷达照相点</item>
		<item >监控照相点</item>
		<item >区间测速照相点</item>
		<item >其他照相点</item>
	</string-array>
	<string name="SelfPointSpeedText">限速速度选择，限速</string>
	<string-array name="SelfPointSpeedArrayText">
	    <item>10公里</item>
	    <item>20公里</item>
	    <item>30公里</item>
	    <item>40公里</item>
	    <item>50公里</item>
	    <item>60公里</item>
	    <item>70公里</item>
	    <item>80公里</item>
	    <item>90公里</item>
	    <item>100公里</item>
	    <item>110公里</item>
	    <item>120公里</item>
	    <item>130公里</item>
	</string-array>
	<string name="SelfPointDirectionMsg">多向点种类选择</string>
	<string-array name="SelfPointDirectionArray">
		<item >单向点</item>
		<item >双向点</item>
		<item >三向点</item>
		<item >四向点</item>
		<item >多向点</item>
	</string-array>
	<string name="SelfPointItemRecordText">按上下键开始录音</string>
	<string-array name="SelfPointItemRecordArratText">
	    <item>开始录音</item>
	    <item>正在录音</item>
	    <item>录音完成</item>
	</string-array>
	<string name="SelfPointItemPlayText">按上下键开始播放录音</string>
	<string-array name="SelfPointItemPlayArrayText">
	    <item>开始播放录音</item>
	    <item>正在播放录音</item>
	    <item>录音播放完成</item>
	</string-array>
	<string name="SelfPointErrorByLoation">卫星定位未完成，无法进行自建操作</string>
	<string name="SelfPointRecordModeText">自建点类别选择</string>
	<string-array name="SelfPointRecordModeMsg">
		<item >简易点</item>
		<item >录音点</item>
		<item >专业点</item>
	</string-array>
	<string name="DingDongMsg">\u0020叮咚</string>
	<string name="SelfPointBackwardStartMsg">逆向自建坐标起点</string>
	<string name="DiDiVoiceMsg">\u0020的的</string>
	<string name="SelfPointRecordFinish">自建坐标设定完成</string>
	<string name="SelfPointRecordDirectionText">自建点方向</string>
	<string name="SelfPointRecordNoMemory">自建点存储空间不足</string>
	<string-array name="SelfPointRecordDirectionTextArray">
	    <item>正向</item>
	    <item>逆向</item>
	</string-array>
	<string-array name="SelfPointCursorMsg">
		<item >东</item>
		<item >东南</item>
		<item >南</item>
		<item >西南</item>
		<item >西</item>
		<item >西北</item>
		<item >北</item>
		<item >东北</item>
	</string-array>
	<string name="SaveText">保存</string>
	<string name="BackText">后退</string>
	<string name="SelfPointSampleFinish">自建点数据采集完成</string>
	<string name="SelfPointSampleStart">自建点数据采集开始</string>
	<string name="GpsLostMsg">GPS定位丢失</string>
	<string name="SelfPointSampleNotFinish">自建点数据采集未完成</string>
	<string name="SelfPointGiveUp">自建点放弃</string>
	<string name="SelfPointNotEnoughDistance">距离不够，无法创建自建点</string>
	<string name="WeatherInfo">天气信息</string>
	<string name="CurrentPosition">当前位置</string>
	<string name="RoadStatus">当前路况</string>
	<string name="Simulate">模拟轨迹</string>
	<string name="CancleSimulate">取消模拟</string>
	<string name="BaiduMap">百度地图</string>
	<string name="version">201407311835</string>
</resources>
