<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"  >

    <LinearLayout
        android:id="@+id/btn_panel"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_title_down"
        android:orientation="horizontal"
        android:visibility="visible" >

        <Button
            android:id="@+id/button_simulate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/Simulate"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/WeatherInfo"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/CurrentPosition"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_roadstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/RoadStatus"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/BaiduMap"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>