<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg3" >

    <LinearLayout
        android:id="@+id/status_ly"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_fragment1"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_Network_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/NetworkDisConnected" />

        <TextView
            android:id="@+id/textView_Login_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/LoginFail" />

        <TextView
            android:id="@+id/textView_Radar_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/RadarNotValid" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/status_ly"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >

            <ImageView android:layout_marginLeft="100dp"
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/speed_tray" />
  

        <ImageView
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/broadcast_bg" />
    </FrameLayout>

</RelativeLayout>