<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#303030"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/btn_panel"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_title_down"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="fill_parent"
            android:gravity="bottom" >

            <Button
                android:id="@+id/button_simulate"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/loading_bg"
                android:text="@string/Simulate"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_panel"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/btn_title_down"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/textView_Network_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NetworkDisConnected"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView_Login_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LoginFail"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView_Radar_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/RadarNotValid"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView_GPS_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LocationStop"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView_Radar_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Empty"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/btn_panel"
        android:layout_below="@id/status_panel"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/msg_ly"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="-126dp"
            android:layout_toLeftOf="@+id/speed_pand"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/panel_black"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/land_gps_overlay" >

                <LinearLayout
                    android:id="@+id/panel_blue"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/land_bg_gpsinfo"
                    android:orientation="vertical"
                    android:paddingLeft="50dp"
                    android:paddingTop="50dp" >

                    <LinearLayout
                        android:id="@+id/event_happen_ly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="前方"
                                android:textSize="25sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:text="350米"
                                android:textSize="35sp" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="限速60"
                            android:textSize="35sp" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/icon_spd_60" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="126dp"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textView_speed_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Speed"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="30sp" />
                        
                        
                        <TextView
                        android:id="@+id/textView_direction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         android:textSize="30sp"
                        android:text="正北1111"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                        <TextView
                            android:id="@+id/textView_current_position"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="经纬度"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/textView_AlarmPoint_Info0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Empty"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/textView_AlarmPoint_Info1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Empty"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="30sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/speed_pand"
            android:layout_width="380dp"
            android:layout_height="380dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/speedometer_on"
            android:fitsSystemWindows="true" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/speedometer_centerback"
                android:fitsSystemWindows="true" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/speedometer_num_on"
                    android:fitsSystemWindows="true"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/speed_pt_iv"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/speedometer_arrow"
                        android:scaleType="fitCenter" />

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/speedomter_center_pt" />

                    
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp" >

            <Button
                android:id="@+id/button_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView_Radar_level"
                android:layout_alignLeft="@+id/textView_current_position"
                android:text="@string/WeatherInfo" />

            <Button
                android:id="@+id/button_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button_test"
                android:layout_alignLeft="@+id/button_test"
                android:text="@string/CurrentPosition" />

            <Button
                android:id="@+id/button_roadstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button_position"
                android:layout_alignLeft="@+id/button_position"
                android:text="@string/RoadStatus" />

            <Button
                android:id="@+id/button_simulate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/Simulate" />

            <Button
                android:id="@+id/button_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/button_simulate"
                android:text="@string/BaiduMap" />

            <Button
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@id/button_map"
                android:text="a1111" />

            <Button
                android:id="@+id/a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@id/a"
                android:text="a222" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>